// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Order Pricing and Discount Integration Tests Shipping Cost Calculations should calculate shipping cost properly 1`] = `
{
  "basePrice": 1500,
  "discount": 0,
  "items": [
    {
      "distance": 4159.59952360499,
      "quantity": 10,
      "shippingCost": 151.8254,
      "warehouseId": "4e505ca8-07f3-4cf3-a221-7b0d28309d87",
      "warehouseName": "New York",
    },
  ],
  "latitude": 37.7749,
  "longitude": -122.4194,
  "quantity": 10,
  "shippingCost": 151.8254,
  "totalPrice": 1500,
}
`;

exports[`Order Pricing and Discount Integration Tests Shipping Cost Calculations should calculate shipping cost properly 2`] = `
{
  "basePrice": 1500,
  "createdAt": Any<String>,
  "discount": 0,
  "id": Any<String>,
  "items": ArrayContaining [
    ObjectContaining {
      "distance": Any<Number>,
      "quantity": Any<Number>,
      "shippingCost": Any<Number>,
      "warehouseName": Any<String>,
    },
  ],
  "latitude": 37.7749,
  "longitude": -122.4194,
  "orderNumber": Any<String>,
  "quantity": 10,
  "shippingCost": 151.8254,
  "status": "PENDING",
  "totalPrice": 1500,
  "updatedAt": Any<String>,
}
`;
